# cpfem_opt

./: .gitignore  404.html  Get_FdSDV.py  LICENSE.txt  README.md  config_simple.yaml  extract_SS_singleEl.py  extract_allSDV.py  index.html  objects.inv  opt_extract.py  opt_fea.py  opt_fea_save1.py  opt_input.py  opt_plot.py  plot_opy.py  pyproject.toml  qabqs_opt1  qopt_  requirements.txt  runner.py
.github/workflows/: ci.yml  docs.yml
API/: index.html
API/core/: index.html
API/engines/: index.html
API/models/: index.html
API/objectives/: index.html
API/plot/: index.html
API/run/: index.html
assets/compareNewSingleXtalModel/: plot_SS_v3.py
docs/: readme.txt  requirements.txt
docs/source/: api.rst  conf.py  example_page.rst  index.rst  input.rst  (+5 more)
documentation/: mkdocs.yml  readme.txt
examples/: ck  ck_asymLockout  input.toml  opt_input.py  setup_parallel.sh  watch
input/: index.html
install/: index.html
matmdl/: __main__.py  crystalPlasticity.py  experimental.py  opt_fea.py  optimizer.py  parallel.py  parser.py  plot.py  run.py  runner.py  state.py  utilities.py  writer.py
objective/: index.html
output/: index.html
runner_version/: qrunner
search/: search_index.json
src/: mk_orthoModel.py  mk_singleModel.py  opt_fea.py  opt_input.py  opt_plot.py  utilities.py
tests/: UT_mX.inp  UT_mX_001.inp  UT_mX_111.inp  exp_001.csv  exp_in.csv  exp_test.csv  input.toml  input_single.toml  mat_orient_test.inp  mat_params.inp  mat_params_out.inp  simulation.cfg  simulation_out.cfg  test_input.py
theory/: index.html
theory2/: index.html
(+69 files in other folders)
