[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matmdl"
version = "0.0.1"
dependencies = [
    "scikit-optimize",
    "matplotlib",
]

[project.optional-dependencies]
doc = [
    "mkdocstrings-python",
	"mkdocs-material",
]

[tool.ruff]
ignore = ["E501", "F722", "E701"]
