[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "matmdl"
version = "0.0.1"
dependencies = [
    "scikit-optimize",
    "matplotlib",
]

[project.optional-dependencies]
doc = [
    "mkdocstrings-python",
	"mkdocs-material",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
ignore = ["E501", "F722", "E701"]

[tool.ruff.format]
indent-style = "tab"
docstring-code-format = true

